@@ -3,7 +3,7 @@
 if ( class_exists( 'FLUpdater' ) ) {
 	FLUpdater::add_product( array(
 		'name'    => 'Beaver Themer',
-		'version' => '1.2.4.3',
+		'version' => '1.2.4.4',
 		'slug'    => 'bb-theme-builder',
 		'type'    => 'plugin',
 	) );
